--- a/.github/workflows/build-test-deploy.yml
+++ b/.github/workflows/build-test-deploy.yml
@@ -79,7 +79,7 @@ jobs:
         run: ./scripts/deploy-release.sh --apply-deploy --manifest-dir "manifests-${RELEASE_VERSION}-${ENV}" --debug
 
   deploy-prod:
-    if: ${{ startsWith(github.ref, 'refs/tags/prod-') }}
+    # if: ${{ startsWith(github.ref, 'refs/tags/prod-') }}
     name: Deploy (Prod)
     needs: [build, test, deploy-staging]
     runs-on: ubuntu-latest
